{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 46,
  "lineage": "c26d5c55-ec96-9738-41b8-b6c2e3dcfe12",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-01T05:50:03.773-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-samples-272912/global/firewalls/space-invaders-vpc-allow-http",
            "name": "space-invaders-vpc-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/global/networks/space-invaders-vpc",
            "priority": 1000,
            "project": "terraform-samples-272912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/global/firewalls/space-invaders-vpc-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-04-01T05:50:03.776-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-samples-272912/global/firewalls/space-invaders-vpc-allow-internal",
            "name": "space-invaders-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/global/networks/space-invaders-vpc",
            "priority": 1000,
            "project": "terraform-samples-272912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/global/firewalls/space-invaders-vpc-allow-internal",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-01T05:50:03.767-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-samples-272912/global/firewalls/space-invaders-vpc-allow-ssh",
            "name": "space-invaders-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/global/networks/space-invaders-vpc",
            "priority": 1000,
            "project": "terraform-samples-272912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/global/firewalls/space-invaders-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "si-server",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200309",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/zones/us-central1-a/disks/space-invaders-webserver-11c03400"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-samples-272912/zones/us-central1-a/instances/space-invaders-webserver-11c03400",
            "instance_id": "8264854102973427965",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "7zAY3jC7A5g=",
            "metadata_startup_script": "sudo apt-get update; apt-get install -y git apache2; cd /var/www/html; rm index.html -f; git init; git pull https://github.com/roitraining/space-invaders.git;",
            "name": "space-invaders-webserver-11c03400",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.67.222.190",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/global/networks/space-invaders-vpc",
                "network_ip": "10.10.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/regions/us-central1/subnetworks/space-invaders-subnet-1",
                "subnetwork_project": "terraform-samples-272912"
              }
            ],
            "project": "terraform-samples-272912",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/zones/us-central1-a/instances/space-invaders-webserver-11c03400",
            "tags": [
              "http"
            ],
            "tags_fingerprint": "MulzF_u7WEg=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/terraform-samples-272912/global/networks/space-invaders-vpc",
            "name": "space-invaders-vpc",
            "project": "terraform-samples-272912",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/global/networks/space-invaders-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-01T05:50:03.831-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/terraform-samples-272912/regions/us-central1/subnetworks/space-invaders-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "space-invaders-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/global/networks/space-invaders-vpc",
            "private_ip_google_access": false,
            "project": "terraform-samples-272912",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-samples-272912/regions/us-central1/subnetworks/space-invaders-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}